# Hive-Design

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: README.md
docs/00-overview/: 00-文档地图.md  01-Hive-Overall-Architecture.md  02-Reference-Architecture.md  03-MVP-Implementation-Blueprint.md  04-Phased-Implementation-Plan.md  05-Hive-vNext-Long-Running-Agent-Harness.md  06-vNext-Implementation-Gap-Analysis.md  design-principles.md  engineering-laws.md
docs/01-foundation/: 01-系统愿景与边界.md  02-核心设计原则.md  03-v0.2-架构加固摘要.md  04-系统总体思想框架.md
docs/02-governance/: 01-角色职责矩阵.md  02-决策分流规则.md  03-Drone-Operating-Model.md
docs/03-state-model/: 01-核心对象模型.md  02-对象状态迁移.md  03-event-model.md  04-plan-versioning-and-supersession.md  05-task-graph-model.md  06-Canonical-Enums-and-Identifiers.md  07-MVP-Object-Package.md  08-vNext-Compiled-Artifact-Package.md
docs/04-planning/: 01-Project-Charter-规范.md  02-Execution-Plan-规范.md  03-research-sprint-spec.md  04-evidence-pack-spec.md  05-plan-compilation-protocol.md  06-task-graph-compilation.md  07-Project-Bootstrap-Protocol.md  08-Requirement-Ledger-and-Coverage-Model.md  09-Input-to-Spec-and-TaskGraph-Pipeline.md  10-Benchmark-Repo-Research-Protocol.md  11-Project-Dossier-Compilation-Protocol.md  12-Compilation-Lifecycle-and-Freshness-Protocol.md  13-vNext-Minimum-Implementation-Slices-and-Phase-Plan.md
docs/05-execution/: 00-Agent-Session-Protocol.md  00-agent-session-protocol.md  01-任务准入规则.md  02-Worker-执行边界.md  03-Handoff-记录规范.md  04-agentrun-lease-heartbeat-protocol.md  05-executor-adapter-contract.md  (+13 more)
(+57 files in other folders)
