[project]
name = "hive-agent"
version = "0.1.0"
description = "AI Agent scheduling and orchestration system"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "anthropic>=0.92",
    "aiofiles>=23.0",
    "rich>=13.0",
]

[project.scripts]
hive = "hive.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]

[tool.hatch.metadata]
allow-direct-references = true
